<resources>
    <string name="app_name">Healthy Life</string>
    <string name="open">Open</string>
    <string name="close">close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="paracetamol_decription">Paracetamol is a commonly used medicine that can help treat pain and reduce a high temperature (fever). It\'s typically used to relieve mild or moderate pain, such as headaches, toothache or sprains, and reduce fevers caused by illnesses such as colds and flu. Paracetamol is often recommended as one of the first treatments for pain, as it\'s safe for most people to take and side effects are rare.</string>
    <string name="side_effects_from_paracetamol">Side effects from paracetamol are rare but can include: an allergic reaction, which can cause a rash and swelling flushing, low blood pressure and a fast heartbeat – this can sometimes happen when paracetamol is given in hospital into a vein in your arm blood disorders, such as thrombocytopenia (low number of platelet cells) and leukopenia (low number of white blood cells) liver and kidney damage, if you take too much (overdose) – this can be fatal in severe cases Speak to a pharmacist or doctor if you develop any troublesome side effects that you think could be caused by paracetamol.</string>
    <string name="pudin_hara">Dabur Pudin Hara Active Antacid offers quick relief from stomach aches and bloating. It regulates bowel movement. Enriched with the goodness of medicinal herbs, it helps in treating the problem of gas and acidity. It promotes better digestion and helps get rid of common digestive disorders. Ayurvedic medicine is safe to administer for people of all age groups. This Dabur product offers relief from nausea, vomiting as well as discomfort caused due to overeating. The herbal medicine is also effective in lowering gastritis and gastroesophageal reflux disease symptoms. Dabur Pudin Hara price is quite reasonable.</string>
    <string name="pundin_hara_side_effect">No side effects of Dabur Pudin Hara have been reported in the medical literature. However, you should always consult your doctor before using Dabur Pudin Hara.</string>
    <string name="symptom_typhoid"><![CDATA[-> A persistent high temperature that gradually increases each day\n -> Headache\n -> General aches and pains\n -> Extreme tiredness (fatigue)\n -> Cough\n -> Constipation]]></string>
    <string name="typhoid">Vaccination Typhoid fever is a bacterial infection that can spread throughout the body, affecting many organs. Without prompt treatment, it can cause serious complications and can be fatal. It\'s caused by a bacterium called Salmonella typhi, which is related to the bacteria that cause salmonella food poisoning.</string>
    <string name="typhoid_prev">(1)Vaccination\n (2)Typhoid is spread by contact and ingestion of infected human feces. This can happen through an infected water source or when handling food.\n (3)The only effective treatment for typhoid is antibiotics. The most commonly used are ciprofloxacin (for non-pregnant adults) and ceftriaxone.</string>
    <string name="tuberculosis">Tuberculosis (TB) is an airborne disease, caused by a bacteria M. tuberculosis. It is an infectious disease that most commonly affects the lungs but can affect any part of the body (except the hair and the nails). TB spreads through air. When someone with TB coughs, spits or sneezes, droplets of mucous carrying TB bacteria may be expelled into the air. Since TB is airborne, anyone who inhales the bacteria can get infected with TB. About 5-10% of people exposed to the bacteria, may develop an active disease state, owing largely to an inefficient immune system, and other associated factors.</string>
    <string name="tuberculosis_symptoms"><![CDATA[-> Coughing for three or more weeks\n -> Coughing up blood or mucus\n -> Chest pain, or pain with breathing or coughing\n -> Unintentional weight loss\n -> Fatigue\n -> Fever\n -> Night sweats\n -> Chills\n -> Loss of appetite]]></string>
    <string name="tb_prev">If you have active TB, it generally takes a few weeks of treatment with TB medications before you\'re not contagious anymore. Follow these tips to help keep your friends and family from getting sick:\n (1)Stay home.\n (2)Ventilate the room.\n (3)Cover your mouth. \n (4)Wear a face mask.</string>
    <string name="cancer">Cancer refers to any one of a large number of diseases characterized by the development of abnormal cells that divide uncontrollably and have the ability to infiltrate and destroy normal body tissue. Cancer often has the ability to spread throughout your body. Cancer is the second-leading cause of death in the world. But survival rates are improving for many types of cancer, thanks to improvements in cancer screening, treatment and prevention.</string>
    <string name="cancer_symptoms"><![CDATA[-> Fatigue\n -> Lump or area of thickening that can be felt under the skin\n -> Weight changes, including unintended loss or gain\n -> Skin changes, such as yellowing, darkening or redness of the skin, sores that won\'t heal, or changes to existing moles\n -> Changes in bowel or bladder habits\n -> Persistent cough or trouble breathing\n -> Difficulty swallowing\n -> Hoarseness\n -> Persistent indigestion or discomfort after eating\n -> Persistent, unexplained muscle or joint pain\n -> Persistent, unexplained fevers or night sweats\n -> Unexplained bleeding or bruising]]></string>
    <string name="cancer_prev">(1)Stop smoking\n (2)Avoid excessive sun exposure\n (3)Eat a healthy diet. \n (4)Exercise most days of the week\n (5)Maintain a healthy weight\n (6)Drink alcohol in moderation, if you choose to drink\n (7)Ask your doctor about immunizations.</string>
</resources>